2009-05-15  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.py: Fixed editable text bug (bug #574223).

	* plugins/Makefile.am: 
	* plugins/event_monitor.py: 
	* plugins/event_monitor.ui: 
	* plugins/interface_view.py: 
	* plugins/interface_view.ui: 
	* plugins/script_recorder.py: 
	* plugins/script_recorder.ui: 
	* plugins/validate.py: 
	* plugins/validate.ui: 
	* po/POTFILES.in: Migrated to GtkBuilder (bug 572207).

2009-05-04  Eitan Isaacson  <eitan@ascender.com>

	* NEWS:
	* README:
	* configure.in: Bumped to version 1.7.1.

	* src/lib/accerciser/accerciser.py (Main.run): Minimize CPU usage
	and wakeups by setting gil to False, and pumping events with a
	timeout as opposed to an idle callback (bug #576954).

	* .gitignore: Added for cleaner git usage.

2009-05-02  Eitan Isaacson  <eitan@ascender.com>

	* plugins/ipython_view.py: Made up/down history not loop (bug #578608).

	* README: 
	* accerciser.spec.in: 
	* debian/control: 
	* macaroon/pyreqs.py: 
	* pyreqs.py: Removed bonobo and ORBit2 dependencies. Accerciser
	does not depend on them directly, and they will be deprecated in
	GNOME 3.0 (bug #580421).

2009-04-13 Brian G. Merrell <bgmerrell@novell.com>

	* NEWS:
	* README:
	* configure.in: Prepared 1.6.1 release.

2009-04-05  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/prefs_dialog.py: 
	* src/lib/accerciser/node.py: Updated highlight SVG to work with
	newer rsvg (bug #576756).

2009-03-16  Eitan Isaacson  <eitan@ascender.com>

	* NEWS:
	* README:
	* configure.in: Prepared 1.6.0 release.

2009-03-11  Mike Gorse  <mgorse@novell.com>

	* plugins/interface_view.py: Call getindexInParent to pass the
	correct index to addSelection (bug #574783).

2009-03-04  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/main_window.py: Added an informative window
	title (bug #574103).
	* src/lib/accerciser/prefs_dialog.py: Fixed empty  padding
	issue (bug #574101)
	* plugins/script_recorder.py: Port to gtksourceview2 (bug #574100).
