@@ -1,3 +1,9 @@
+2009-05-24  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accessible_treeview.py:
+	* plugins/interface_view.py: Added accessible name changed
+	listeners to update the view accordingly (bug #582434).
+
 2009-05-15  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/interface_view.py: Fixed editable text bug (bug #574223).
